fix: link visibility and focus color

--- a/app/src/App/App.css
+++ b/app/src/App/App.css
@@ -56,3 +56,8 @@ a {
 a:hover {
   color: var(--color-main);
 }
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 2pt var(--color-main);
+}
