--- a/app/src/App/components/modal/modal.css
+++ b/app/src/App/components/modal/modal.css
@@ -33,4 +33,5 @@
 
 .modal__helper > a {
   cursor: pointer;
+  font-weight: 600;
 }
